--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "node-sass": "^6.0.0",
     "postcss": "^7.0.35",
+    "sass-loader": "^10",
+    "style-loader": "^2.0.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.2",
     "vue-template-compiler": "^2.6.11"
   },
